changed path of index.html file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://angelawu688.github.io",
+  "homepage": "https://angelawu688.github.io/personal-website",
   "name": "angelawu688.github.io",
   "version": "0.1.0",
   "private": true,
