modified for SEO, need to change icons still

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "DeveloperFolio",
-  "name": "DeveloperFolio",
+  "short_name": "Angela's Personal Website",
+  "name": "Angela's Personal Website",
   "icons": [
     {
       "src": "/favicon.ico",
